[package]
name = "health_metrics"
version = "0.1.0"
edition.workspace = true

[dependencies]
eth2 = { workspace = true }
metrics = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
psutil = { version = "3.3.0", optional = true }
procfs = { version = "0.15.1", optional = true }

[features]
default = ["lighthouse"]
lighthouse = ["psutil", "procfs"]